--- a/pom.xml
+++ b/pom.xml
@@ -21,8 +21,8 @@
 		<spring.version>5.1.2.RELEASE</spring.version>
 		<junit.version>4.11</junit.version>
 		<log4j.version>1.2.17</log4j.version>
-		<sonar.host.url>http://3.17.28.248:9000/</sonar.host.url>
-                <sonar.login>7ec09e32759713bf4fcb1749447c9eb9a8046838</sonar.login>
+		<sonar.host.url>http://localhost:9000/</sonar.host.url>
+                <sonar.login>a20862468150e8490db6a9cdbfd80099972abb5d</sonar.login>
 		 <!--
                 <sonar.login>admin</sonar.login>
 		<sonar.password>admin</sonar.password> 
