--- a/pom.xml
+++ b/pom.xml
@@ -21,7 +21,7 @@
 		<spring.version>5.1.2.RELEASE</spring.version>
 		<junit.version>4.11</junit.version>
 		<log4j.version>1.2.17</log4j.version>
-		<sonar.host.url>http://localhost:9000/</sonar.host.url>
+		<sonar.host.url>http://169.254.154.103:9000/</sonar.host.url>
                 <sonar.login>a20862468150e8490db6a9cdbfd80099972abb5d</sonar.login>
 		 <!--
                 <sonar.login>admin</sonar.login>
